--- a/diana_framework.ipynb
+++ b/diana_framework.ipynb
@@ -1047,18 +1047,14 @@
      "nuid": "5b581042-2045-4208-afa7-c02efc1762f2",
      "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": "Autores dessa chorna peluda"
+     "title": "Autores"
     }
    },
    "outputs": [],
    "source": [
     "# Data de criação 10/03/2025\n",
     "# Autores(\n",
-    "#   airon_mattos@banco_cooperativo.com.br\n",
     "#   rafael_rpereira@banco_cooperativo.com.br\n",
-    "#   robert_borges@banco_cooperativo.com.br\n",
-    "#   bruno samuel - banco_cooperativo Projeto Nuclea\n",
-    "#   mariana.marroquim - banco_cooperativo Projeto Nuclea)"
    ]
   }
  ],
