--- a/diana_framework.ipynb
+++ b/diana_framework.ipynb
@@ -1047,7 +1047,7 @@
      "nuid": "5b581042-2045-4208-afa7-c02efc1762f2",
      "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": "Autores"
+     "title": "Autor"
     }
    },
    "outputs": [],
