--- a/diana_framework.ipynb
+++ b/diana_framework.ipynb
@@ -1054,7 +1054,7 @@
    "source": [
     "# Data de criação 10/03/2025\n",
     "# Autores(\n",
-    "#   rafael_rpereira@banco_cooperativo.com.br\n",
+    "#   rafael_rpereira@banco_cooperativo.com.br\n"
    ]
   }
  ],
